# claude-home-server

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt  run.sh
config/: permissions.yaml  server.yaml
docs/: ARCHITECTURE.md  CONFIGURATION.md  THREAT_MODEL.md
docs/plans/: 2026-03-29-claude-home-server-design.md
src/: __init__.py  audit.py  config.py  permissions.py  server.py
src/modules/: __init__.py  base.py  discovery.py  docker.py  filesystem.py  homeassistant.py  plex.py  system.py
src/safety/: __init__.py  compose_validator.py  ha_config_validator.py  input_sanitizer.py  output_filter.py  path_validator.py
src/utils/: __init__.py  backup.py  circuit_breaker.py  subprocess_safe.py
system/: install.sh  setup-wizard.sh
system/apparmor/: mcp-server-profile
system/docker-socket-proxy/: docker-compose.yaml
system/sudoers/: mcp-server
system/sudoers/wrapper-scripts/: mcp-apt-install  mcp-restart-service  mcp-systemctl  mcp-ufw-edit
system/systemd/: claude-home-server.service
tests/: conftest.py
tests/integration/: test_failure_modes.py
tests/security/: test_path_traversal.py
tests/unit/: test_compose_validator.py  test_docker.py  test_filesystem.py  test_ha_config_validator.py  test_homeassistant.py  test_output_filter.py  test_path_validator.py  test_permissions.py  test_plex.py  test_system.py
